fix(STN-524): adjust spacing for lead and splash fonts inside a list (#701)

--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -148,12 +148,16 @@
     line-height: 127%;
     @include hb-global-color('color', 'gray-dark');
 
+    @include grid-media-min('lg') {
+      font-size: hb-calculate-rems(22px);
+    }
+
     .hb-local-footer--dark & {
       @include hb-global-color('color', 'gray-light');
     }
 
-    @include grid-media-min('lg') {
-      font-size: hb-calculate-rems(22px);
+    li & {
+      margin: hb-calculate-rems(-3px) 0 0;
     }
   }
 
@@ -174,6 +178,10 @@
 
     @include hb-traditional {
       @include hb-pairing-color('color', 'primary');
+    }
+
+    li & {
+      margin: hb-calculate-rems(-3px) 0 0;
     }
   }
 
